reservation/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation
  namespace: e-charging
  labels:
    app: reservation
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: reservation
